fix-output.txt
/Users/zhukai/Desktop/Gator-项目文件夹_06112/fix-demo.js:49
  console.log('  after deep end:', JSON.stringify(content.substring(de + deepEndMarker.length, de + deepEndMarker.length + 40)) ;
                                                                                                                              ^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1787:18)
    at Module._compile (node:internal/modules/cjs/loader:1828:20)
    at Object..js (node:internal/modules/cjs/loader:1985:10)
    at Module.load (node:internal/modules/cjs/loader:1577:32)
    at Module._load (node:internal/modules/cjs/loader:1379:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
    at node:internal/main/run_main_module:33:47

Node.js v24.16.0
